--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "VT323";
+  src: url(../assets/fonts/VT323-Regular.ttf) format("truetype");
+}
